--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,20 +1,60 @@
-@import "minima"; /* Load default Minima styles */
+---
+---
 
-/* Apply monospace font globally */
+html, html[data-theme="light"] {
+	--link-color: rgb(0, 112, 201);
+  --main-background-color: hsl(0, 0%, 90%);
+  --main-text-color: hsl(0, 0%, 20%);
+}
+
+html[data-theme="dark"] {
+  --link-color: rgb( 100, 210, 255);
+  --main-background-color: hsl(0, 0%, 20%);
+  --main-text-color: hsl(0, 0%, 85%); 
+}
+
+
+@media (prefers-color-scheme: dark) {
+    html, html[data-theme="dark"] {
+      --link-color: rgb( 100, 210, 255);
+    	--main-background-color: hsl(0, 0%, 20%);
+    	--main-text-color: hsl(0, 0%, 85%); 
+    }
+
+    html[data-theme="light"] {
+		  --link-color: rgb(0, 112, 201);
+    	--main-background-color: hsl(0, 0%, 90%);
+  	 --main-text-color: hsl(0, 0%, 20%);
+  } 
+}
+
+
 body {
-    font-family: monospace;
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
+	background-color: var(--main-background-color);
+	color: var(--main-text-color);
+	font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	padding: 1em;
 }
 
-/* Apply proper dark/light theme switching */
-[data-theme="light"] {
-    background: #fff;
-    color: #000;
+a {
+	color: var(--link-color);
 }
 
-[data-theme="dark"] {
-    background: #111;
-    color: #ddd;
+article {
+	max-width: 650px; 
+	margin: 2em auto;
+}
+
+
+h1 {
+	font-size: 2rem;
+}
+
+h2 {
+	font-size: 1.5rem;
+	margin-top: 2em;
+}
+
+p {
+	font-size: 1.25rem;
 }
