--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="generator" content="Jekyll">
-    <link rel='stylesheet' type='text/css' href='assets/css/main.css'>
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Derek Kedziora">
