--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="{%- if page.title -%}{{ page.title }}{%- else -%}{{ site.title }}{%- endif -%}"/>
     <meta name="twitter:description" content="{%- if page.description -%}{{ page.description | truncate: 140 }}{%- else -%}{{ site.description | truncate: 140  }}{%- endif -%}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
