removes second background

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,7 +101,7 @@ p {
 .hero code {
     font-family: 'JetBrains Mono', monospace;
     display: inline-block;
-    background: #e0e0e0;
+    background: #ccc;
     padding: 0.2rem 0.4rem;
     border-radius: 4px;
     color: #222;
