--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,7 @@ html[data-theme="dark"] {
 body {
     background-color: var(--main-background-color);
     color: var(--main-text-color);
-    font-family: 'Fira Code', monospace;
+    font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     padding: 1em;
 }
 
@@ -99,7 +99,6 @@ p {
 
 /* Code styling for hero snippet */
 .hero code {
-    font-family: 'JetBrains Mono', monospace;
     display: inline-block;
     background: #ccc;
     padding: 0.2rem 0.4rem;
