--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="generator" content="Jekyll">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=JetBrains+Mono&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Derek Kedziora">
