--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,7 @@ html[data-theme="dark"] {
 body {
 	background-color: var(--main-background-color);
 	color: var(--main-text-color);
-	font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-family: "Fira Code", monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	padding: 1em;
 }
 
@@ -101,6 +101,7 @@ p {
   padding: 0.2rem 0.4rem;
   border-radius: 4px;
   color: #222;
+  font-family: "JetBrains Mono", monospace;
 }
 [data-theme="dark"] .hero code {
   background: #444;
